Enter nix-shell in all tmux windows

--- a/tmux-up.conf
+++ b/tmux-up.conf
@@ -5,8 +5,13 @@ new-window -n test
 new-window -n serve
 new-window -n analyse
 
+send-keys -t vim "nix-shell" Enter
 send-keys -t vim "vim ." Enter
+send-keys -t repl "nix-shell" Enter
 send-keys -t repl "npx elm repl" Enter
+send-keys -t test "nix-shell" Enter
 send-keys -t test "fd . | entr -cs 'npx elm-test'" Enter
+send-keys -t serve "nix-shell" Enter
 send-keys -t serve "npm start" Enter
+send-keys -t analyse "nix-shell" Enter
 send-keys -t analyse "fd . | entr -cs 'npx elm-analyse'" Enter
